--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 }
 
 .library{
-  min-height: 76vh;
+  min-height: 81vh;
   position: relative;
 }
 
@@ -116,51 +116,10 @@ body{
   object-fit: contain;
 }
 
-.play{
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background-color: green;
-  color: black;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10px;
-  opacity: 0;
-  transition: all 1s ease-out;
-}
 
 .buttons > *{
-  margin: 0 12px;
-}
+  margin: 0 120px;
 
-.signupbtn{
-  color: rgb(156, 148, 148);
-  font-weight: bold;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.signupbtn:hover{
-  font-size: 17px;
-  color: black;
-}
-
-.loginbtn{
-  color: rgb(156, 148, 148);
-  font-weight: bold;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.loginbtn:hover{
-  font-size: 17px;
-  color: black;
 }
 
 .songbutton{
@@ -279,3 +238,17 @@ display: block;
 color: #aaa;
 font-size: 12px;
 }
+
+/* .loginbtn{
+  color: rgb(156, 148, 148);
+  font-weight: bold;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.loginbtn:hover{
+  font-size: 17px;
+  color: black;
+} */
